--- a/pkg/tomarkdown/templates/bulleted_list_item.gohtml
+++ b/pkg/tomarkdown/templates/bulleted_list_item.gohtml
@@ -1,1 +1,2 @@
-{{if gt .Depth 0}}{{"    " | repeat .Depth}}{{end}}- {{ rich2md .BulletedListItem.Text }}
+{{if gt .Depth 0}}{{"  " | repeat .Depth}}{{end}}- {{ rich2md .BulletedListItem.Text }}
+{{if .Block.HasChildren}}{{"\n"}}{{end}}
