--- a/pkg/tomarkdown/templates/numbered_list_item.gohtml
+++ b/pkg/tomarkdown/templates/numbered_list_item.gohtml
@@ -1,1 +1,2 @@
-{{if gt .Depth 0}}{{"    " | repeat .Depth}}{{end}}{{add .Extra.SameBlockIdx 1}}. {{ rich2md .NumberedListItem.Text }}
+{{if gt .Depth 0}}{{"  " | repeat .Depth}}{{end}}{{add .Extra.SameBlockIdx 1}}. {{ rich2md .NumberedListItem.Text }}
+{{if .Block.HasChildren}}{{"\n"}}{{end}}
