--- a/pkg/tomarkdown/templates/paragraph.gohtml
+++ b/pkg/tomarkdown/templates/paragraph.gohtml
@@ -1,1 +1,2 @@
-{{if .Paragraph}}{{ rich2md .Paragraph.Text }}{{end}}
+{{if gt .Depth 0}}{{"  " | repeat .Depth}}{{end}}{{ rich2md .Paragraph.Text }}
+
