fix nested items in templates

--- a/pkg/tomarkdown/templates/bulleted_list_item.gohtml
+++ b/pkg/tomarkdown/templates/bulleted_list_item.gohtml
@@ -1,2 +1,4 @@
-{{if gt .Depth 0}}{{"  " | repeat .Depth}}{{end}}- {{ rich2md .BulletedListItem.Text }}
+{{if .BulletedListItem -}}
+{{if gt .Depth 0}}{{"    " | repeat .Depth}}{{end}}- {{ rich2md .BulletedListItem.Text }}
+{{- end}}
 {{if .Block.HasChildren}}{{"\n"}}{{end}}
