--- a/pkg/tomarkdown/templates/quote.gohtml
+++ b/pkg/tomarkdown/templates/quote.gohtml
@@ -1,2 +1,4 @@
-> {{ rich2md .Quote.Text }}
+{{if .Quote -}}
+{{if gt .Depth 0}}{{"    " | repeat .Depth}}{{end}}> {{ rich2md .Quote.Text }}
+{{- end}}
 
