--- a/pkg/tomarkdown/templates/numbered_list_item.gohtml
+++ b/pkg/tomarkdown/templates/numbered_list_item.gohtml
@@ -1,2 +1,4 @@
-{{if gt .Depth 0}}{{"  " | repeat .Depth}}{{end}}{{add .Extra.SameBlockIdx 1}}. {{ rich2md .NumberedListItem.Text }}
+{{if .NumberedListItem -}}
+{{if gt .Depth 0}}{{"    " | repeat .Depth}}{{end}}{{add .Extra.SameBlockIdx 1}}. {{ rich2md .NumberedListItem.Text }}
+{{- end}}
 {{if .Block.HasChildren}}{{"\n"}}{{end}}
